@@ -1,3 +1,8 @@
+Thu Mar 31 12:26:20 2005  Nick Burrett  <nick@sqrt.co.uk>
+
+	* unix/dev.c (__fsopen): Reduce OS_FSControl canonicalisation
+	calls by using a fixed buffer from the stack.
+
 Thu Mar 31 10:52:14 2005  Nick Burrett  <nick@sqrt.co.uk>
 
 	* signal/post.c (__unixlib_raise_signal): Remove PROCMAGIC
